--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ h1 {
 }
 
 p {
-	font-size: 20px;
+	font-size: 25px;
 	color: #E321A9;
 }
 
@@ -39,6 +39,9 @@ h2{
   <p>a self taught programmer, Infosec Practioner</p>
   <p>and CTF player:)</p>
   <h2>contacts</h2>
-  <p>All platforms @Ow3nso</p>
+  <p>Twitter: <a href=https://twitter.com/Ow3nso>@Ow3nso</a> </p>
+  <p>Github: <a href=https://github.com/ow3nso>@Ow3nso</a> </p>
+  <p>Linkedin: <a href=https://www.linkedin.com/in/jeffrey-owen-375b92156/</a>Owen</p>
+  <p>Instagram: <a href=https://instagram.com/owen._so>@Owen._so</a> </p>
 </body>
 </html>
