--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ h2{
   <h2>contacts</h2>
   <p>Twitter: <a href=https://twitter.com/Ow3nso>@Ow3nso</a> </p>
   <p>Github: <a href=https://github.com/ow3nso>@Ow3nso</a> </p>
-  <p>Linkedin: <a href=https://www.linkedin.com/in/jeffrey-owen-375b92156/</a>Owen</p>
+  <p>Linkedin: <a href=https://www.linkedin.com/in/jeffrey-owen-375b92156/>Owen</a></p>
   <p>Instagram: <a href=https://instagram.com/owen._so>@Owen._so</a> </p>
 </body>
 </html>
