--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ h2{
   <p>i am a tech enthusiast,</p>
   <p>a self taught programmer, Infosec Practioner</p>
   <p>and CTF player:)</p>
+  <p>For tutorials and writeups <a href=https://ow3nso.medium.com>CLICK HERE</a></P>
   <h2>contacts</h2>
   <p>Twitter: <a href=https://twitter.com/Ow3nso>@Ow3nso</a> </p>
   <p>Github: <a href=https://github.com/ow3nso>@Ow3nso</a> </p>
