--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 body {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 300;
-   color: #333;
+   color: #2F4F4F ;
 }
 
 h1 {
