--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ body {
 
 h1 {
 	font-size: 50px;
+	color: #00000;
 }
 
 p {
@@ -27,6 +28,7 @@ p {
 
 h2{
 	font-size: 40px;
+	color: #00000;
 }
   	
   </style>
