--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@ h2{
         <!--
 
             function Redirect() {
-               window.location = "file:///C:/Users/PC/Documents/0w3nso.html";
+               window.location = "https://ow3nso.github.io/0w3nso.html";
             }
 
             function Redirect2() {
-            	window.location = "file:///C:/Users/PC/Documents/Projects.html"
+            	window.location = "https://ow3nso.github.io/projects.html"
             }
          //-->
 
