--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ h2{
     <center> <p2>I am Owen </p2> </center><br></br>
     <p3>Developer-CyberSec-CTFplayer</p3>
 
-    <a href="file:///C:/Users/PC/Documents/Projects.html" style="top: 80%; left: 90%; color: red; font-size: 30px; position: absolute;">See More=></a>
+    <a href="https://ow3nso.github.io/projects.html" style="top: 80%; left: 90%; color: red; font-size: 30px; position: absolute;">See More=></a>
 
 
         
