--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+	
 	<title>Ow3nso</title>
 	<style type="text/css">
 
