--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ h2{
         <!--
 
             function Redirect() {
-               window.location = "https://ow3nso.github.io/0w3nso.html";
+               window.location = "https://ow3nso.github.io/";
             }
 
             function Redirect2() {
