--- a/index.html
+++ b/index.html
@@ -115,7 +115,15 @@ h2{
 	top: 61%;
 
 }
+.topImg{
+    width:100%;
+    height:50%; 
+    top:7%;
+}
 @media screen and (max-width: 576px){
+    .topImg{
+        height: 45%;
+    }
     p2{
         font-size: 30px;
         position: absolute;
@@ -149,9 +157,9 @@ h2{
     h2{
         position: absolute;
         left: 30%;
-        top: 66%;
+        top: 57%;
     }
-    
+
 }
 
 	</style>
@@ -174,7 +182,7 @@ h2{
 </head>
 <body>
 
-	<img src="https://th.bing.com/th/id/R8d3ce89d7b4f960ff601e0f9e88845d4?rik=FWLMp2qE1azt9g&pid=ImgRaw" style="width:100%;height:320px; top:7%;">
+	<img src="https://th.bing.com/th/id/R8d3ce89d7b4f960ff601e0f9e88845d4?rik=FWLMp2qE1azt9g&pid=ImgRaw" class="topImg">
 	<img src="https://th.bing.com/th/id/OIP.s4ME-4e7Bei1FCCBX7skDgHaE8?w=236&h=180&c=7&o=5&dpr=1.5&pid=1.7" style="width:17%;height:22%; top:75%;">
 	<img src="https://th.bing.com/th/id/OIP.gIEv3zO_iFJO0bB-0zp8mwHaE8?w=221&h=180&c=7&o=5&dpr=1.5&pid=1.7" style="width:17%;height:22%; top:75%; left: 23%;">
 	<img src="https://th.bing.com/th/id/OIP.s_keorX6hfsWqcX5xXP5NQHaE7?w=235&h=180&c=7&o=5&dpr=1.5&pid=1.7" style="width:17%;height:22%; top:75%; left: 46%;">
@@ -201,7 +209,7 @@ h2{
 
         <section>
         	<p class="aligncenter">
-    <img src="https://pbs.twimg.com/profile_images/1340953061712408576/9h7HDh9P_400x400.jpg" alt="centered image" style="@media screen and (max-width: 576px){position: absolute; left: 100%}" />
+    <img src="https://pbs.twimg.com/profile_images/1340953061712408576/9h7HDh9P_400x400.jpg" class="profile" alt="centered image" />
 </p>
     <center> <p2>I am Owen </p2> </center><br></br>
     <p3>Developer-CyberSec-CTFplayer</p3>
