--- a/index.html
+++ b/index.html
@@ -156,8 +156,12 @@ h2{
     }
     h2{
         position: absolute;
-        left: 30%;
-        top: 57%;
+        left: 25%;
+        top: 56%;
+    }
+    .profile{
+        position: absolute;
+        left: 70%;
     }
 
 }
@@ -183,10 +187,10 @@ h2{
 <body>
 
 	<img src="https://th.bing.com/th/id/R8d3ce89d7b4f960ff601e0f9e88845d4?rik=FWLMp2qE1azt9g&pid=ImgRaw" class="topImg">
-	<img src="https://th.bing.com/th/id/OIP.s4ME-4e7Bei1FCCBX7skDgHaE8?w=236&h=180&c=7&o=5&dpr=1.5&pid=1.7" style="width:17%;height:22%; top:75%;">
-	<img src="https://th.bing.com/th/id/OIP.gIEv3zO_iFJO0bB-0zp8mwHaE8?w=221&h=180&c=7&o=5&dpr=1.5&pid=1.7" style="width:17%;height:22%; top:75%; left: 23%;">
-	<img src="https://th.bing.com/th/id/OIP.s_keorX6hfsWqcX5xXP5NQHaE7?w=235&h=180&c=7&o=5&dpr=1.5&pid=1.7" style="width:17%;height:22%; top:75%; left: 46%;">
-	<img src="https://th.bing.com/th/id/OIP.s42rYQOXKuoZlECxqt2ZjwAAAA?w=313&h=176&c=7&o=5&dpr=1.5&pid=1.7" style="width:17%;height:22%; top:75%; left: 69%;">
+	<img src="https://th.bing.com/th/id/OIP.s4ME-4e7Bei1FCCBX7skDgHaE8?w=236&h=180&c=7&o=5&dpr=1.5&pid=1.7" style="width:19%;height:22%; top:75%; left: 2%">
+	<img src="https://th.bing.com/th/id/OIP.gIEv3zO_iFJO0bB-0zp8mwHaE8?w=221&h=180&c=7&o=5&dpr=1.5&pid=1.7" style="width:19%;height:22%; top:75%; left: 26%;">
+	<img src="https://th.bing.com/th/id/OIP.s_keorX6hfsWqcX5xXP5NQHaE7?w=235&h=180&c=7&o=5&dpr=1.5&pid=1.7" style="width:19%;height:22%; top:75%; left: 50%;">
+	<img src="https://th.bing.com/th/id/OIP.s42rYQOXKuoZlECxqt2ZjwAAAA?w=313&h=176&c=7&o=5&dpr=1.5&pid=1.7" style="width:19%;height:22%; top:75%; left: 75%;">
 	
 	<header class="header">
         <nav class="navbar">
@@ -209,7 +213,7 @@ h2{
 
         <section>
         	<p class="aligncenter">
-    <img src="https://pbs.twimg.com/profile_images/1340953061712408576/9h7HDh9P_400x400.jpg" class="profile" alt="centered image" />
+    <img src="https://pbs.twimg.com/profile_images/1340953061712408576/9h7HDh9P_400x400.jpg" class="profile" alt="centered image" style="border-radius: 50%;" />
 </p>
     <center> <p2>I am Owen </p2> </center><br></br>
     <p3>Developer-CyberSec-CTFplayer</p3>
@@ -217,7 +221,7 @@ h2{
     <p5>*CyberSec</p5>
     <p6>*CTFplayer</p6>
 
-    <a href="https://ow3nso.github.io/projects.html" style=" top: 85%; left: 87%; color: red; font-size: 20px; position: absolute; ">See More=></a>
+    <a href="https://ow3nso.github.io/projects.html" class="seemore" style=" top: 101%; left: 5%; color: blue; font-size: 20px; position: absolute; ">See More=></a>
 
 
         
