--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Ow3nso</title>
 	<style type="text/css">
 
@@ -115,11 +116,69 @@ h2{
 	top: 61%;
 
 }
+h3{
+    position: absolute;
+    font-size: 35px;
+    left: 47%;
+    text-decoration: underline;
+    color: white;
+}
 .topImg{
     width:100%;
     height:50%; 
     top:7%;
 }
+.fa {
+  font-size: 50px;
+  width: 5px;
+  height: 2px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 2.0;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+  position: absolute;
+  top: 45%;
+  left: 40%;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+  position: absolute;
+  top: 45%;
+  left: 60%;
+}
+.fa-android {
+  background: #a4c639;
+  color: white;
+  position: absolute;
+  top: 45%;
+  left: 70%;
+}
+
+#bottom{
+    width: 100%;
+    height: 30%;
+    position: absolute;
+    background-color: black;
+    top: 105%;
+}
+
 @media screen and (max-width: 576px){
     .topImg{
         height: 45%;
@@ -161,10 +220,38 @@ h2{
     }
     .profile{
         position: absolute;
-        left: 60%;
+        left: 64%;
     }
-
+    h3{
+        position: absolute;
+        left: 25%;
+        font-size: 30px;
+    }
+    .fa-twitter {
+  position: absolute;
+  left: 18%;
 }
+
+.fa-google {
+  position: absolute;
+  left: 36%;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+  position: absolute;
+  top: 45%;
+  left: 54%;
+}
+.fa-android {
+  background: #a4c639;
+  color: white;
+  position: absolute;
+  top: 45%;
+  left: 72%;
+}
+}
+
 
 	</style>
 
@@ -229,6 +316,14 @@ h2{
 
         <center><h2>PROJECTS</h2></center>
         
- 
+        <div id="bottom">
+        
+        <h3>GET IN TOUCH</h3>
+        <a href="#" class="fa fa-twitter" style=""></a>
+        <a href="#" class="fa fa-instagram" ></a>
+        <a href="#" class="fa fa-google" ></a>
+        <a href="#" class="fa fa-android" ></a>
+    </div>
+
 </body>
 </html>
