--- a/index.html
+++ b/index.html
@@ -319,10 +319,10 @@ h3{
         <div id="bottom">
         
         <h3>GET IN TOUCH</h3>
-        <a href="#" class="fa fa-twitter" style=""></a>
-        <a href="#" class="fa fa-instagram" ></a>
-        <a href="#" class="fa fa-google" ></a>
-        <a href="#" class="fa fa-android" ></a>
+        <a href="https://twitter.com/ow3nso" class="fa fa-twitter" style=""></a>
+        <a href="https://www.instagram.com/owen._so" class="fa fa-instagram" ></a>
+        <a href="mailto:jeffowen04@gmail.com" class="fa fa-google" ></a>
+        <a href="wa.me/+16193780890" class="fa fa-android" ></a>
     </div>
 
 </body>
