--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ h3{
         <a href="https://twitter.com/ow3nso" class="fa fa-twitter" style=""></a>
         <a href="https://www.instagram.com/owen._so" class="fa fa-instagram" ></a>
         <a href="mailto:jeffowen04@gmail.com" class="fa fa-google" ></a>
-        <a href="wa.me/+16193780890" class="fa fa-android" ></a>
+        <a href="http://wa.me/+16193780890" class="fa fa-android" ></a>
     </div>
 
 </body>
