--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@ h1{
             <a href="#" class="nav-logo">Ow3nso</a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link" onclick ="Redirect();">Home</a>
+                    <a href="https://ow3nso.github.io/" class="nav-link" onclick ="Redirect();">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link" onclick="Redirect2()">Projects</a>
