--- a/drivingschool.html
+++ b/drivingschool.html
@@ -12,6 +12,7 @@
             background-color: dimgray;
             padding: 100px 0;
             text-align: center;
+            height: 100vh;
         }
         body{
             margin: 0;
