--- a/drivingschool.html
+++ b/drivingschool.html
@@ -11,7 +11,7 @@
             color: black;
             background-color: dimgray;
             text-align: center;
-            height: 100vh;
+            padding: 100px;
         }
         body{
             margin: 0;
