--- a/drivingschool.html
+++ b/drivingschool.html
@@ -199,8 +199,8 @@
 
     <script>
         function openwhatsapp(){
-            var message = document.getElementById("message");
-            window.open("https://wa.me/+254707394018?text=" + message);
+            var input = document.getElementById('message').value;
+            window.open("https://wa.me/+254707394018?text=" + input);
         }
     </script>
     
