--- a/0w3nso.html
+++ b/0w3nso.html
@@ -236,6 +236,10 @@
 	<button id="down" onclick="moveDown()">DOWN</button>
 	<button id="up" onclick="moveUP()">UP</button>
 	<script>
+window.onload = function (){
+alert("Site still in construction for better experience");
+alert("please switch to landscape orientation");
+}
 		var car1 = document.getElementById("car1");
 		var pos = 0;
 		var topNum = 0;
