--- a/0w3nso.html
+++ b/0w3nso.html
@@ -237,7 +237,7 @@
 	<button id="up" onclick="moveUP()">UP</button>
 	<script>
 window.onload = function (){
-alert("Site still in construction for better experience");
+alert("model town board still in construction for better experience");
 alert("please switch to landscape orientation");
 }
 		var car1 = document.getElementById("car1");
