--- a/app.html
+++ b/app.html
@@ -24,7 +24,7 @@ function mobileMenu() {
 }
     </script>
 
-    <title>Document</title>
+    <title>Ow3nso | Techwizz</title>
 
     <style>
         html{
