--- a/app.html
+++ b/app.html
@@ -53,6 +53,7 @@ function mobileMenu() {
             background-image: url(https://thumbs.dreamstime.com/b/office-worker-workplace-back-view-young-woman-sitting-desk-window-background-there-laptop-diagram-188734580.jpg);
             width: 100%;
             height: 100vh;
+            position: relative;
         }
         .profile-picture{
             border-radius: 50%;
