--- a/app.html
+++ b/app.html
@@ -24,7 +24,7 @@ function mobileMenu() {
 }
     </script>
 
-    <title>Ow3nso | Techwizz</title>
+    <title>Document</title>
 
     <style>
         html{
@@ -242,10 +242,10 @@ function mobileMenu() {
                 font-size: 50px;
             }
             .heading-icons{
-                position: absolute;
-                bottom: 0%;
+            
                 background-color: black;
                 width: 100%;
+                margin-top: 30%;
             }
             .heading-icons1{
                 text-align: center;
