--- a/app.html
+++ b/app.html
@@ -245,7 +245,8 @@ function mobileMenu() {
             
                 background-color: black;
                 width: 100%;
-                margin-top: 30%;
+                position: absolute;
+                bottom: 0%;
             }
             .heading-icons1{
                 text-align: center;
