--- a/app.html
+++ b/app.html
@@ -24,7 +24,7 @@ function mobileMenu() {
 }
     </script>
 
-    <title>Document</title>
+    <title>Ow3nso | Techwiz</title>
 
     <style>
         html{
@@ -253,7 +253,7 @@ function mobileMenu() {
             }
             .heading-buts{
                 margin-left: 10%;
-                margin-top: 30px;
+                margin-top: 70px;
             }
             .button-1{
                 margin-right: 70px;
@@ -360,13 +360,7 @@ function mobileMenu() {
                             <button className="button-1"><a href="#contactme">Hire me</a></button>
                             <button className="button-2"><a href="#title">Scroll</a></button>    
                         </div>
-                        <div className="heading-icons">
-                            <div className="heading-icons1">
-                            <a href="https://twitter.com/ow3nso" class="fa fa-twitter"></a>
-                            <a href="#" class="fa fa-google"></a>
-                            <a href="https://www.instagram.com/owen._so/" class="fa fa-instagram"></a>
-                            </div>
-                        </div>
+                        
                     </header>
 
                 </div>
