--- a/portfolio.html
+++ b/portfolio.html
@@ -420,7 +420,7 @@
                         <div className="heading-ps">
                             <h4 className="heading-p1">Hey, I'm Jeffrey Owen</h4>
                             <h2 className="heading-p2">Passionate young tech enthusiast</h2>
-                            <h2 className="heading-p3">Fullstack developer | Software Engineer</h2>
+                            <h2 className="heading-p3">Fullstack developer | Software Developer</h2>
                         </div>
                         <div className="heading-buts">
                             <button className="button-1"><a href="#contactme">Hire me</a></button>
