--- a/portfolio.html
+++ b/portfolio.html
@@ -514,7 +514,7 @@ if (mq.matches) {
                             <label for="lname">Email</label>
                             <input type="email" id="lname" name="email" placeholder="Youremail@example.com" required/>
                             <label for="message">Message</label>
-                            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                            <textarea placeholder="Chat with me" name="message" id="message" cols="30" rows="10"></textarea>
                             <input id="my-form-status" type="submit" value="submit"/>
                         </form>
                         </div>
