--- a/portfolio.html
+++ b/portfolio.html
@@ -530,9 +530,9 @@ if (mq.matches) {
             return(
                 <footer>
                     <h2 className="footer-header">LETS CONNECT!</h2>
-                    <a href="#" class="fa fa-twitter"></a>
-                    <a href="#" class="fa fa-google"></a>
-                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="twitter.com/ow3nso" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-linkedin"></a>
+                    <a href="instagram.com/owen._so" class="fa fa-instagram"></a>
                     <p className="footer-para"><span>Created by Ow3nso</span></p>
                 </footer>
             )
